# c4p2n

./: .travis.yml  Dockerfile  README.md  pyproject.toml  run-app.sh  setup.cfg
.github/workflows/: lint.yml
c4p2n/: api.py  config.py  constants.py  extractors.py  models.py  notion.py  telegram.py
