[tool.poetry]
name = "c4p2n"
version = "1.0.0"
description = "c4p2n is a webhook that submits data about the talk from TypeForm to our Notion."
authors = ["PiterPy Meetup <meetup@piterpy.ru>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"

fastapi = "^0.52.0"
fastapi-security-typeform = "^1.0.0"

uvicorn = "^0.11.3"

notion = "^0.0.25"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
